added some images and videos to my resources

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!--
   index.html
+  Name: Emeric Fokouong Touolac
+  Course: CIS 181
   This is the main landing page of the Cape Town Travel Website.
   It introduces Cape Town and welcomes visitors.
 -->
@@ -30,8 +32,8 @@
       <h2>Welcome to Cape Town</h2>
       <article>
         <p>Cape Town is a vibrant city nestled between majestic Table Mountain and the Atlantic Ocean. From its breathtaking landscapes to its rich blend of cultures, Cape Town promises an unforgettable experience for every visitor.</p>
-        <img src="images/cape-town-overview.jpg" alt="A panoramic view of Cape Town and Table Mountain. Photo by [Photographer], Unsplash." />
-        <p class="img-credit">Photo by [Photographer] on Unsplash</p>
+        <img src="images/capeTown-area.jpg" alt="A panoramic view of Cape Town and Table Mountain. Photo by Marlin Clark, Unsplash." />
+        <p class="img-credit">Photo by Marlin Clark on Unsplash</p>
       </article>
     </section>
     <aside>
