adding images and video to  project html

--- a/history-culture.html
+++ b/history-culture.html
@@ -28,8 +28,8 @@
       <h2>The Story of Cape Town</h2>
       <article>
         <p>From its colonial past to its modern-day significance, Cape Town has been shaped by diverse cultures and historic events. The city is famous for landmarks such as Robben Island—where Nelson Mandela was imprisoned, the District Six Museum, and the vibrant Bo-Kaap neighborhood.</p>
-        <img src="images/bo-kaap.jpg" alt="The colorful houses of Bo-Kaap, Cape Town. Photo by [Photographer], Unsplash." />
-        <p class="img-credit">Photo by [Photographer] on Unsplash</p>
+        <img src="images/ashley-jurius-EHz0cDqoL8k-unsplash.jpg" alt="Mountain in cape Town." />
+        <p class="img-credit">Photo by Marlin Clark on Unsplash</p>
       </article>
     </section>
     <aside>
