--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!--
   about.html
-  About the web developer (Emeric Fokouong Touolac).
+  Developer info (Emeric Fokouong Touolac).
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -33,9 +33,8 @@
       </article>
       <article>
         <h2>Video Introduction</h2>
-        <!-- You can embed a short intro video or use an image if you prefer -->
-        <video controls poster="images/your-video-thumb.jpg">
-          <source src="video/your-intro.mp4" type="video/mp4">
+        <video controls poster="images/ashley-jurius-53tN_APs-50-unsplash.jpg">
+          <source src="videos/4873092-uhd_3840_2160_25fps.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </article>
