--- a/travel-resources.html
+++ b/travel-resources.html
@@ -75,12 +75,11 @@
     <section>
       <h2>Watch: Cape Town Highlights</h2>
       <article>
-        <!-- Example video embed; replace with your actual source -->
-        <video controls poster="images/cape-town-video-thumb.jpg">
-          <source src="video/cape-town-highlights.mp4" type="video/mp4">
+        <video controls poster="images/capeTown-area.jpg">
+          <source src="videos/5664986-uhd_3840_2160_25fps.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
-        <p class="img-credit">Video: [Your Source or "YouTube"]</p>
+        <p class="img-credit">TODO! add the video credit here.</p>
       </article>
     </section>
   </main>
