--- a/travel-resources.html
+++ b/travel-resources.html
@@ -4,6 +4,7 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Cape Town Travel | Travel Resources</title>
@@ -11,6 +12,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <header>
     <h1>Cape Town: Travel Resources & Activities</h1>
@@ -27,7 +29,50 @@
     <section>
       <h2>Getting Around & Where to Stay</h2>
       <article>
-        <p>Cape Town offers a range of transport options, from buses and taxis to rental cars. Top neighborhoods for visitors include the City Bowl, Sea Point, and Camps Bay.</p>
+        <p>Cape Town offers a range of transport options, from buses and taxis to rental cars. Top neighborhoods for
+          visitors include the City Bowl, Sea Point, and Camps Bay.</p>
+        <div class="carousel transport-carousel">
+          <div class="carousel-item">
+            <figure>
+              <img src="images/transport/bus.jpg" alt="Bus transport in Cape Town">
+              <figcaption>Photo by <a
+                  href="https://unsplash.com/@jonathanborba?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                  target="_blank" rel="noopener">Jonathan Borba</a> on <a
+                  href="https://unsplash.com/photos/white-and-red-bus-ILGMLCFjgxk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                  target="_blank" rel="noopener">Unsplash</a></figcaption>
+            </figure>
+          </div>
+          <div class="carousel-item">
+            <figure>
+              <img src="images/transport/taxi.jpg" alt="Taxi transport in Cape Town">
+              <figcaption>Photo by <a
+                  href="https://unsplash.com/@adamtones?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                  target="_blank" rel="noopener">Adam Marcucci</a> on <a
+                  href="https://unsplash.com/photos/white-taxi-on-gray-asphalt-road-during-daytime-WNd6J4ujLBo?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                  target="_blank" rel="noopener">Unsplash</a></figcaption>
+            </figure>
+          </div>
+          <div class="carousel-item">
+            <figure>
+              <img src="images/transport/rental-car.jpg" alt="Rental car transport in Cape Town">
+              <figcaption>Photo by <a
+                  href="https://unsplash.com/@bbtl?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                  target="_blank" rel="noopener">Josh Berquist</a> on <a
+                  href="https://unsplash.com/photos/gray-mercedes-benz-coupe-on-black-asphalt-road-during-daytime-_4sWbzH5fp8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                  target="_blank" rel="noopener">Unsplash</a></figcaption>
+            </figure>
+          </div>
+          <div class="carousel-item">
+            <figure>
+              <img src="images/transport/bike.jpg" alt="Bike transport in Cape Town">
+              <figcaption>Photo by <a
+                  href="https://unsplash.com/@jaspergarrattphotography?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                  target="_blank" rel="noopener">Jasper Garratt</a> on <a
+                  href="https://unsplash.com/photos/woman-in-black-jacket-riding-bicycle-on-road-during-daytime-xkbUR3Irvm8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                  target="_blank" rel="noopener">Unsplash</a></figcaption>
+            </figure>
+          </div>
+        </div>
       </article>
     </section>
     <section>
@@ -38,6 +83,70 @@
           <li>Sample fresh seafood at the V&A Waterfront</li>
           <li>Taste local wines in nearby vineyards</li>
         </ul>
+        <div class="carousel food-carousel">
+          <div class="carousel-item">
+            <figure>
+              <img src="images/foods/Bobotie-at-TasteOfThePlace.com-IG.jpg" alt="Bobotie dish">
+              <figcaption>Photo from <a href="https://tasteoftheplace.com/bobotie/" target="_blank" rel="noopener">Taste
+                  of the Place</a></figcaption>
+            </figure>
+          </div>
+          <div class="carousel-item">
+            <figure>
+              <img src="images/foods/Cape-Town-Traditional-Cape-Town-Foods.png" alt="Cape Town dish">
+              <figcaption>Photo from <a href="https://southafricatravel.org/try-out-traditional-cape-town-foods/"
+                  target="_blank" rel="noopener">South Africa Travel - Traditional Cape Town Foods</a></figcaption>
+            </figure>
+          </div>
+          <div class="carousel-item">
+            <figure>
+              <img src="images/foods/wine.jpg" alt="Cape Town wine">
+              <figcaption>Photo by <a
+                  href="https://unsplash.com/@deeliver?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                  target="_blank" rel="noopener">Deeliver</a> on <a
+                  href="https://unsplash.com/photos/a-bunch-of-bottles-of-wine-sitting-on-a-table-h1TqEgPC6c0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                  target="_blank" rel="noopener">Unsplash</a></figcaption>
+            </figure>
+          </div>
+          <div class="carousel-item">
+            <figure>
+              <img src="images/foods/corn.jpg" alt="Cape Town corn">
+              <figcaption>Photo from <a
+                  href="https://www.eatout.co.za/article/find-authentic-south-african-food-cape-town-western-cape/"
+                  target="_blank" rel="noopener">Eat Out</a></figcaption>
+            </figure>
+          </div>
+          <div class="carousel-item">
+            <figure>
+              <img src="images/foods/james-wei-3pzrAAEocSU-unsplash.jpg" alt="Cape Town seafood">
+              <figcaption>Photo by <a
+                  href="https://unsplash.com/@unibodies?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                  target="_blank" rel="noopener">James Wei</a> on <a
+                  href="https://unsplash.com/photos/pile-of-edible-crabs-3pzrAAEocSU?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                  target="_blank" rel="noopener">Unsplash</a></figcaption>
+            </figure>
+          </div>
+          <div class="carousel-item">
+            <figure>
+              <img src="images/foods/large-fish.jpg" alt="Cape Town large fish">
+              <figcaption>Photo by <a
+                  href="https://unsplash.com/@v2osk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                  target="_blank" rel="noopener">v2osk</a> on <a
+                  href="https://unsplash.com/photos/raw-meat-on-green-plastic-container-1-6CHp3zLIQ?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                  target="_blank" rel="noopener">Unsplash</a></figcaption>
+            </figure>
+          </div>
+          <div class="carousel-item">
+            <figure>
+              <img src="images/foods/fish.jpg" alt="Cape Town fish">
+              <figcaption>Photo by <a
+                  href="https://unsplash.com/@v2osk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                  target="_blank" rel="noopener">v2osk</a> on <a
+                  href="https://unsplash.com/photos/person-wearing-blue-cellophane-about-to-pick-fish-on-table-Ac4qV0s2-XY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                  target="_blank" rel="noopener">Unsplash</a></figcaption>
+            </figure>
+          </div>
+        </div>
       </article>
     </section>
     <section>
@@ -75,11 +184,19 @@
     <section>
       <h2>Watch: Cape Town Highlights</h2>
       <article>
-        <video controls poster="images/capeTown-area.jpg">
-          <source src="videos/5664986-uhd_3840_2160_25fps.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-        <p class="img-credit">TODO! add the video credit here.</p>
+        <div class="media-container">
+          <video id="capeTownVideo" controls poster="images/thumbail-vid.png">
+            <source src="videos/5664986-uhd_3840_2160_25fps.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+
+          <audio id="natureAudio" preload="auto" controls loop style="display: none;">
+            <source src="audio/nature-ambience-323729.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
+
+          <p class="img-credit">Cape Town view from the sky</p>
+        </div>
       </article>
     </section>
   </main>
@@ -88,4 +205,5 @@
   </footer>
   <script src="js/script.js"></script>
 </body>
+
 </html>
